// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column availability single source of truth the derived picker lists match their snapshots: REPORT_DETAILS_CUSTOM_COLUMNS 1`] = `
[
  "receipt",
  "date",
  "posted",
  "merchant",
  "description",
  "card",
  "category",
  "categoryGLCode",
  "attendees",
  "totalPerAttendee",
  "tag",
  "exchangeRate",
  "originalamount",
  "reimbursable",
  "billable",
  "mcc",
  "taxCode",
  "taxrate",
  "taxAmount",
  "amount",
  "total",
  "withdrawalID",
  "submitterUserID",
  "submitterPayrollID",
  "orderDealNumbers",
]
`;

exports[`Column availability single source of truth the derived picker lists match their snapshots: TYPE_CUSTOM_COLUMNS.EXPENSE 1`] = `
[
  "receipt",
  "date",
  "status",
  "submitted",
  "approved",
  "posted",
  "exported",
  "merchant",
  "description",
  "from",
  "to",
  "policyname",
  "card",
  "category",
  "categoryGLCode",
  "attendees",
  "totalPerAttendee",
  "tag",
  "exchangeRate",
  "originalamount",
  "reportID",
  "base62ReportID",
  "reimbursable",
  "billable",
  "mcc",
  "taxCode",
  "taxrate",
  "taxAmount",
  "title",
  "amount",
  "exportedto",
  "action",
  "withdrawalID",
  "submitterUserID",
  "submitterPayrollID",
  "orderDealNumbers",
]
`;
